--- a/UR5e_gripper/integration_package_moveit/config/ros_controllers.yaml
+++ b/UR5e_gripper/integration_package_moveit/config/ros_controllers.yaml
@@ -1,22 +1,17 @@
-eff_joint_traj_controller:
-  type: effort_controllers/JointTrajectoryController
-  joints: &robot_joints
-    - shoulder_pan_joint
-    - shoulder_lift_joint
-    - elbow_joint
-    - wrist_1_joint
-    - wrist_2_joint
-    - wrist_3_joint
-  gains: # Required because we're controlling an effort interface
-    shoulder_pan_joint: { p: 4000, d: 200, i: 1, i_clamp: 1 }
-    shoulder_lift_joint: { p: 10000, d: 200, i: 1, i_clamp: 1 }
-    elbow_joint: { p: 2000, d: 20, i: 1, i_clamp: 1 }
-    wrist_1_joint: { p: 500, d: 1, i: 1, i_clamp: 1 }
-    wrist_2_joint: { p: 500, d: 1, i: 1, i_clamp: 1 }
-    wrist_3_joint: { p: 10, d: 0.1, i: 0, i_clamp: 1 }
-
-gripper_controller:
-  type: effort_controllers/GripperActionController
-  joint: ee_finger_joint
-  gains:
-    ee_finger_joint: { p: 10, d: 0.1, i: 1, i_clamp: 1 }
+controller_list:
+  - name: "scaled_pos_joint_traj_controller"
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    joints:
+      - shoulder_pan_joint
+      - shoulder_lift_joint
+      - elbow_joint
+      - wrist_1_joint
+      - wrist_2_joint
+      - wrist_3_joint
+  - name: "gripper_controller"
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    joints:
+      - soft_robotics_gripper_left_finger_joint1
+      - soft_robotics_gripper_right_finger_joint1
