--- a/UR5e_gripper/integration_package/package.xml
+++ b/UR5e_gripper/integration_package/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>integration_package</name>
-  <version>0.0.0</version>
-  <description>The integration_package package</description>
+  <version>1.0.0</version>
+  <description>Pacchetto di integrazione tra un robot UR5 e il gripper</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="davide@todo.todo">davide</maintainer>
+  <maintainer email="davide@todo.todo">Davide Trevisi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -52,16 +52,17 @@
 
   <test_depend>roslaunch</test_depend>
   <exec_depend>controller_manager</exec_depend>
-  <exec_depend>effort_controllers</exec_depend>
+  <exec_depend>position_controller</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>gazebo_ros_control</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>gripper_action_controller</exec_depend>
-  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>
-  <exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>ur_description</exec_depend>
+  <exec_depend>ur_gazebo</exec_depend>
+  <exec_depend>soft_robotics_description</exec_depend>
+  <exec_depend>soft_robotics_gazebo</exec_depend>
+  <exec_depend>gazebo_ros_link_attacher</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
