--- a/UR5e_gripper/integration_package_moveit/package.xml
+++ b/UR5e_gripper/integration_package_moveit/package.xml
@@ -1,41 +1,36 @@
-<package>
+<?xml version="1.0"?>
+<package format="2">
 
   <name>integration_package_moveit</name>
-  <version>0.3.0</version>
+  <version>1.0.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the robot_gripper with the MoveIt Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the ur5e with the MoveIt Motion Planning Framework
   </description>
-  <author email="todo@todo.com">Davide Trevisi</author>
+  <author>Davide Trevisi</author>
   <maintainer email="todo@todo.com">Davide Trevisi</maintainer>
+  
+  <license>TODO</license>
 
-  <license>BSD</license>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>moveit_fake_controller_manager</exec_depend>
+  <exec_depend>moveit_planners_ompl</exec_depend>
+  <exec_depend>moveit_ros_benchmarks</exec_depend>
+  <exec_depend>moveit_ros_move_group</exec_depend>
+  <exec_depend>moveit_ros_visualization</exec_depend>
+  <exec_depend>moveit_ros_warehouse</exec_depend>
+  <exec_depend>warehouse_ros_mongo</exec_depend>
+  <exec_depend>moveit_setup_assistant</exec_depend>
+  <exec_depend>moveit_simple_controller_manager</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rviz</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
+  <exec_depend>ur_description</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>integration_package</exec_depend>
 
-  <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit</url>
-
+  <test_depend>roslaunch</test_depend>
   <buildtool_depend>catkin</buildtool_depend>
-
-  <run_depend>moveit_ros_move_group</run_depend>
-  <run_depend>moveit_fake_controller_manager</run_depend>
-  <run_depend>moveit_kinematics</run_depend>
-  <run_depend>moveit_planners_ompl</run_depend>
-  <run_depend>moveit_ros_visualization</run_depend>
-  <run_depend>moveit_setup_assistant</run_depend>
-  <run_depend>moveit_simple_controller_manager</run_depend>
-  <run_depend>joint_state_publisher</run_depend>
-  <run_depend>joint_state_publisher_gui</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>rviz</run_depend>
-  <run_depend>tf2_ros</run_depend>
-  <run_depend>xacro</run_depend>
-  <!-- The next 2 packages are required for the gazebo simulation.
-       We don't include them by default to prevent installing gazebo and all its dependencies. -->
-  <!-- <run_depend>joint_trajectory_controller</run_depend> -->
-  <!-- <run_depend>gazebo_ros_control</run_depend> -->
-  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
-  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
-  <run_depend>integration_package</run_depend>
-  <run_depend>trac_ik_kinematics_plugin</run_depend>
 
 </package>
