--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "gazebo_ros_link_attacher"]
 	path = gazebo_ros_link_attacher
 	url = https://github.com/pal-robotics/gazebo_ros_link_attacher.git
+	branch = melodic-devel
 [submodule "Universal_Robot"]
 	path = Universal_Robot
 	url = https://github.com/ros-industrial/universal_robot.git
