--- a/UR5e_gripper/integration_package_moveit/config/kinematics.yaml
+++ b/UR5e_gripper/integration_package_moveit/config/kinematics.yaml
@@ -1,10 +1,5 @@
-#manipulator:
-#  kinematics_solver: ur_kinematics/UR10KinematicsPlugin
-#  kinematics_solver_search_resolution: 0.005
-#  kinematics_solver_timeout: 0.005
-#  kinematics_solver_attempts: 3
 manipulator:
   kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
-  solve_type: Distance
-  kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
+  solve_type: Manipulation1
+  kinematics_solver_search_resolution: 0.015
+  kinematics_solver_timeout: 0.015
