--- a/UR5e_gripper/integration_package_moveit/config/ompl_planning.yaml
+++ b/UR5e_gripper/integration_package_moveit/config/ompl_planning.yaml
@@ -122,6 +122,7 @@ planner_configs:
     max_failures: 5000 # maximum consecutive failure limit. default: 5000
 manipulator:
   longest_valid_segment_fraction: 0.01
+  enforce_joint_model_state_space: true
   default_planner_config: RRTConnect
   planner_configs:
     - SBL
