--- a/castle_builder/CMakeLists.txt
+++ b/castle_builder/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(robot_commands)
+project(castle_builder)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -7,13 +7,11 @@ project(robot_commands)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  integration_package
-  roscpp
-  moveit_ros_planning_interface 
-  moveit_ros_move_group
-  gazebo_ros_link_attacher
-  castle_builder
+find_package(
+catkin REQUIRED
+std_msgs
+message_generation
+rospy
 )
 
 ## System dependencies are found with CMake's conventions
@@ -50,16 +48,17 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ add_message_files(
+   FILES
+   Positions.msg
+ )
 
 ## Generate services in the 'srv' folder
-#add_service_files(
-#  FILES
-#)
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -69,10 +68,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-#generate_messages(
-#  DEPENDENCIES
-#  std_msgs  # Or other packages containing msgs
-#)
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -104,9 +103,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
+   CATKIN_DEPENDS message_runtime
 #  INCLUDE_DIRS include
-   LIBRARIES robot_commands
-#  CATKIN_DEPENDS integration_package
+#  LIBRARIES scrabble
+#  CATKIN_DEPENDS rospy
 #  DEPENDS system_lib
 )
 
@@ -117,13 +117,13 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
+# include
+# ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/robot_commands.cpp
+#   src/${PROJECT_NAME}/scrabble.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -134,9 +134,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(add_collisions src/add_collisions.cpp)
-add_executable(demo src/demo.cpp)
-add_executable(robot_control_node src/robot_control.cpp)
+# add_executable(${PROJECT_NAME}_node src/scrabble_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -149,17 +147,9 @@ add_executable(robot_control_node src/robot_control.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(add_collisions
- ${catkin_LIBRARIES}
-)
-
-target_link_libraries(demo
- ${catkin_LIBRARIES}
-)
-
-target_link_libraries(robot_control_node
- ${catkin_LIBRARIES}
-)
+# target_link_libraries(${PROJECT_NAME}_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -208,7 +198,7 @@ target_link_libraries(robot_control_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_robot_commands.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_scrabble.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
