--- a/castle_builder/package.xml
+++ b/castle_builder/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>robot_commands</name>
+  <name>castle_builder</name>
   <version>1.0.0</version>
-  <description>The robot_commands package</description>
+  <description>Castle_builder package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="davide@todo.todo">davide</maintainer>
+  <maintainer email="todo@todo.todo">Davide Trevisi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/robot_commands</url> -->
+  <!-- <url type="website">http://wiki.ros.org/scrabble</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -37,25 +37,19 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
+     <build_depend>message_generation</build_depend> 
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
+     <exec_depend>message_runtime</exec_depend> 
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>castle_builder</buildtool_depend>
-  <build_depend>integration_package</build_depend>
-  <build_export_depend>integration_package</build_export_depend>
-  <exec_depend>integration_package</exec_depend>
-  <exec_depend>integration_package_moveit</exec_depend>
-  <build_depend>gazebo_ros_link_attacher</build_depend>
-  <exec_depend>gazebo_ros_link_attacher</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
