--- a/soft_robotics/soft_robotics_gazebo/package.xml
+++ b/soft_robotics/soft_robotics_gazebo/package.xml
@@ -9,9 +9,9 @@
   Soft robotics's gripper package
   </description>
 
-  <maintainer email="ndavide.dn@gmail.com">Davide</maintainer>
+  <maintainer email="todo@todo.com">Davide</maintainer>
   <license>BSD</license>
-  <author email="ndavide.dn@gmail.com">Davide</author>
+  <author email="todo@todo.com">Davide</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>robot_state_publisher</exec_depend>
