--- a/UR5e_gripper/integration_package_moveit/config/kinematics.yaml
+++ b/UR5e_gripper/integration_package_moveit/config/kinematics.yaml
@@ -1,5 +1,4 @@
 manipulator:
   kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
-  solve_type: Manipulation1
-  kinematics_solver_search_resolution: 0.015
-  kinematics_solver_timeout: 0.015
+  solve_type: Distance
+  kinematics_solver_timeout: 0.005
