--- a/UR5e_gripper/integration_package_moveit/config/ompl_planning.yaml
+++ b/UR5e_gripper/integration_package_moveit/config/ompl_planning.yaml
@@ -30,7 +30,9 @@ planner_configs:
     goal_bias: 0.05 # When close to goal select goal, with this probability? default: 0.05
   RRTConnect:
     type: geometric::RRTConnect
-    range: 0.0 # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
+    optimization_objective: PathLengthOptimizationObjective
+    termination_condition: ExactSolution
+    range: 0.05 # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
   RRTstar:
     type: geometric::RRTstar
     range: 0.0 # Max motion added to tree. ==> maxDistance_ default: 0.0, if 0.0, set on setup()
@@ -120,9 +122,17 @@ planner_configs:
     sparse_delta_fraction: 0.25 # delta fraction for connection distance. This value represents the visibility range of sparse samples. default: 0.25
     dense_delta_fraction: 0.001 # delta fraction for interface detection. default: 0.001
     max_failures: 5000 # maximum consecutive failure limit. default: 5000
+  PersistentPRM:
+    type: geometric::PRM
+    max_nearest_neighbors: 10
+    optimization_objective: PathLengthOptimizationObjective
+    multi_query_planning_enabled: true
+    store_planner_data: true
+    load_planner_data: true
+    planner_data_path: /roadmap.graph
 manipulator:
-  longest_valid_segment_fraction: 0.01
-  enforce_joint_model_state_space: true
+  longest_valid_segment_fraction: 0.005
+  projection_evaluator: joints(shoulder_pan_joint, shoulder_lift_joint)
   default_planner_config: RRTConnect
   planner_configs:
     - SBL
