--- a/UR5e_gripper/integration_package/config/ur5e_gripper_controllers.yaml
+++ b/UR5e_gripper/integration_package/config/ur5e_gripper_controllers.yaml
@@ -30,6 +30,10 @@ gripper_controller_gazebo:
   joints:
     - soft_robotics_gripper_left_finger_joint1
     - soft_robotics_gripper_right_finger_joint1
+  constraints:
+    goal_time: 0.6
+    stopped_velocity_tolerance: 0.05
+  stop_trajectory_duration: 0.5
 
 joint_group_pos_controller:
   type: position_controllers/JointGroupPositionController
